# dkapitan.github.io

./: .gitignore  .nojekyll  CNAME  README.md  _brand.yml  _config.yml  _quarto.yml  about-rwds.html  contact.html  feeds.html  index.html  index.qmd  latest-content.html  latest-content.xml  listings.json  main.py  mozilla.scss  pyproject.toml  robots.txt  rwds-partners.html  rwds.css  search.json  sitemap.xml  styles.css  ts-and-cs.html
_data/: authors.yml  navigation.yml
_includes/: footer.html  inschrijven.html
about/: index.md
appointment/: index.html  index.qmd
beschikbaarheid/: index.html  index.qmd
blog/: analytical-problem-solving.html  analytical-problem-solving.qmd  azimov.html  azimov.qmd  better-altair-theme.html  better-altair-theme.ipynb  better-altair-theme.out.ipynb  comet-chart.html  comet-chart.qmd  comet-chart.quarto_ipynb  data-is-een-recht.html  data-is-een-recht.qmd  datasolidariteit-ibestuur.html  datasolidariteit-ibestuur.qmd  datasolidariteit-medisch-dossier.html  datasolidariteit-medisch-dossier.qmd  datasolidariteit.html  datasolidariteit.qmd  dsc-whitepaper-pets.html  dsc-whitepaper-pets.qmd  dutch-design-week.html  dutch-design-week.qmd  eerlijke-algoritmen.html  eerlijke-algoritmen.qmd  geletterdheid.html  geletterdheid.qmd  happi.html  happi.qmd  hippo-ai.html  hippo-ai.qmd  index.html  index.md  index.qmd  index.xml  lartpy.html  lartpy.ipynb  nrc-houd-toezicht-algoritmes.html  nrc-houd-toezicht-algoritmes.qmd  obsidian-setup.html  obsidian-setup.qmd  (+14 more)
careers/: index.html  index.xml
case-studies/: index.html
ideas/: index.html  (+1 more)
(+271 files in other folders)
