[project]
name = "dkapitan-github-io"
version = "1.0.0"
description = "Source code for https://kapitan.net"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair>=5.5.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
    "scikit-learn>=1.7.2",
    "statsmodels>=0.14.5",
    "vega",
    "vega-datasets>=0.9.0",
    "vegafusion>=2.0.2",
    "vegafusion-python-embed>=1.6.9",
    "vl-convert-python>=1.8.0",
]

[tool.uv.sources]
vega = { git = "https://github.com/vega/ipyvega/", rev = "master" }
